fix freeform z-index

--- a/garage/arkidraw/css/style.css
+++ b/garage/arkidraw/css/style.css
@@ -66,6 +66,7 @@ body {
   text-align: center;
   display: inline-block;
   vertical-align: bottom;
+  z-index: 2;
 }
 
 .node_right {
